--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /METCalorieCalculation/nbproject/private/
 /METCalorieCalculation/build/
 /ArcadeCouponsCalculation/nbproject/private/
+/PigLatinString/nbproject/private/
