--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /METCalorieCalculation/build/
 /ArcadeCouponsCalculation/nbproject/private/
 /PigLatinString/nbproject/private/
+/PigLatinString/build/
