--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /ArcadeCouponsCalculation/nbproject/private/
 /PigLatinString/nbproject/private/
 /PigLatinString/build/
+/StringWordChange/nbproject/private/
+/StringWordChange/build/
