--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /PigLatinString/build/
 /StringWordChange/nbproject/private/
 /StringWordChange/build/
+/BicycleSpeedCalculator/nbproject/private/
+/BicycleSpeedCalculator/build/
