--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 /StringWordChange/build/
 /BicycleSpeedCalculator/nbproject/private/
 /BicycleSpeedCalculator/build/
+/OutputTimeCalculation/nbproject/private/
+/OutputTimeCalculation/build/
+/PoorProgrammingStyleCorrections/nbproject/private/
+/PoorProgrammingStyleCorrections/build/
+/EstimatingIdealBodyWeight/nbproject/private/
+/EstimatingIdealBodyWeight/build/
+/OverdoseOfCaffeineCalculation/nbproject/private/
+/OverdoseOfCaffeineCalculation/build/
