--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@
 /EstimatingIdealBodyWeight/build/
 /OverdoseOfCaffeineCalculation/nbproject/private/
 /OverdoseOfCaffeineCalculation/build/
+/BabylonianAlgorithmPractice/nbproject/private/
+/BabylonianAlgorithmPractice/build/
+/PigLatinStage2/nbproject/private/
+/PigLatinStage2/build/
+/IntegerOutputSimple/nbproject/private/
+/IntegerOutputSimple/build/
+/AutomobileCommutingPrice/nbproject/private/
+/AutomobileCommutingPrice/build/
+/StraightLineDepreciationFormula/nbproject/private/
+/StraightLineDepreciationFormula/build/
+/VendingMachineChange/nbproject/private/
+/VendingMachineChange/build/
