--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /StraightLineDepreciationFormula/build/
 /VendingMachineChange/nbproject/private/
 /VendingMachineChange/build/
+/ReadInWriteOut/nbproject/private/
+/ReadInWriteOut/build/
