--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /VendingMachineChange/build/
 /ReadInWriteOut/nbproject/private/
 /ReadInWriteOut/build/
+/StringWordChange2/nbproject/private/
+/StringWordChange2/build/
