--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /ReadInWriteOut/build/
 /StringWordChange2/nbproject/private/
 /StringWordChange2/build/
+/RegisterAndReceipt/nbproject/private/
+/RegisterAndReceipt/build/
