--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@
 /StringWordChange2/build/
 /RegisterAndReceipt/nbproject/private/
 /RegisterAndReceipt/build/
+/GradeTotalCalculation/nbproject/private/
+/GradeTotalCalculation/build/
+/IdealBodyWeightVersion2/nbproject/private/
+/IdealBodyWeightVersion2/build/
+/CaffeineOverdoseVersion2/nbproject/private/
+/CaffeineOverdoseVersion2/build/
