--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@
 /IdealBodyWeightVersion2/build/
 /CaffeineOverdoseVersion2/nbproject/private/
 /CaffeineOverdoseVersion2/build/
+/BabylonianAlgorithmVersion2/nbproject/private/
+/BabylonianAlgorithmVersion2/build/
+/GameOfCrapsWinProbability/nbproject/private/
+/GameOfCrapsWinProbability/build/
+/EstimatingAdultHeightOfChild/nbproject/private/
+/EstimatingAdultHeightOfChild/build/
+/BudgetVersusInflationRate/nbproject/private/
+/BudgetVersusInflationRate/build/
