--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,13 @@
 /EstimatingAdultHeightOfChild/build/
 /BudgetVersusInflationRate/nbproject/private/
 /BudgetVersusInflationRate/build/
+/MonthlyInterestRate/nbproject/private/
+/MonthlyInterestRate/build/
+/FibonacciPopulationGrowth/nbproject/private/
+/FibonacciPopulationGrowth/build/
+/CryptarithmeticPuzzle/nbproject/private/
+/CryptarithmeticPuzzle/build/
+/TotalGradeClassRoomExercises/nbproject/private/
+/TotalGradeClassRoomExercises/build/
+/GameOfPig/nbproject/private/
+/GameOfPig/build/
