--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /TotalGradeClassRoomExercises/build/
 /GameOfPig/nbproject/private/
 /GameOfPig/build/
+/RandomPrizeGiveaway/nbproject/private/
+/RandomPrizeGiveaway/build/
