--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@
 /GameOfPig/build/
 /RandomPrizeGiveaway/nbproject/private/
 /RandomPrizeGiveaway/build/
+/IdealBodyWeightVersion3/nbproject/private/
+/IdealBodyWeightVersion3/build/
