--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@
 /RandomPrizeGiveaway/build/
 /IdealBodyWeightVersion3/nbproject/private/
 /IdealBodyWeightVersion3/build/
+/PalindromeCheck/nbproject/private/
+/PalindromeCheck/build/
+/IntegerPairCheck/nbproject/private/
+/IntegerPairCheck/build/
