--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@
 /PalindromeCheck/build/
 /IntegerPairCheck/nbproject/private/
 /IntegerPairCheck/build/
+/HanoiTowersAlgorithmPractice/nbproject/private/
+/HanoiTowersAlgorithmPractice/build/
