--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,20 @@
 /IntegerPairCheck/build/
 /HanoiTowersAlgorithmPractice/nbproject/private/
 /HanoiTowersAlgorithmPractice/build/
+/BeerBottleSong/nbproject/private/
+/BeerBottleSong/build/
+/FractionClass/nbproject/private/
+/FractionClass/build/
+/OdometerMain/nbproject/private/
+/OdometerMain/build/
+/BlogEntryMain/nbproject/private/
+/BlogEntryMain/build/
+/CounterClass/nbproject/private/
+/CounterClass/build/
+/StudentRecordProgram/nbproject/private/
+/StudentRecordProgram/build/
+/TemperatureProgram/nbproject/private/
+/TemperatureProgram/build/
+/DateFormatProgram/nbproject/private/
+/Date/nbproject/private/
+/DateFormatProgram/build/
