--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,13 @@
 /DateFormatProgram/nbproject/private/
 /Date/nbproject/private/
 /DateFormatProgram/build/
+/AnimalSpecies/nbproject/private/
+/AnimalSpecies/build/
+/PetDosage/nbproject/private/
+/PetDosage/build/
+/PizzaOrder/nbproject/private/
+/PizzaOrder/build/
+/CommunitySupportedAggriculture/nbproject/private/
+/CommunitySupportedAggriculture/build/
+/CommaSeparatedValuesFile/nbproject/private/
+/CommaSeparatedValuesFile/build/
